@@ -6,6 +6,7 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ConcurrentLinkedQueue;
@@ -623,7 +624,7 @@ public abstract class BaseTestMethod implements ITestNGMethod {
 
   @Override
   public IRetryAnalyzer getRetryAnalyzer(ITestResult result) {
-    return getRetryAnalyzerConsideringMethodParameteters(result);
+    return getRetryAnalyzerConsideringMethodParameters(result);
   }
 
   @Override
@@ -757,15 +758,36 @@ public abstract class BaseTestMethod implements ITestNGMethod {
     return null;
   }
 
-  private IRetryAnalyzer getRetryAnalyzerConsideringMethodParameteters(ITestResult tr) {
+  private IRetryAnalyzer getRetryAnalyzerConsideringMethodParameters(ITestResult tr) {
     Object[] key = tr.getParameters();
+    boolean relyOnParametersToBeUsedAsKeys = relyOnParametersToBeUsedAsKeys(key);
     IRetryAnalyzer retryAnalyzer = this.m_retryAnalyzer;
-    if ((key != null && key.length != 0) && retryAnalyzer != null) {
+    if (key.length != 0 && retryAnalyzer != null && relyOnParametersToBeUsedAsKeys) {
       String keyAsString = getMethodName() + "_" + Arrays.toString(key);
       retryAnalyzer = m_testMethodToRetryAnalyzer.computeIfAbsent(keyAsString,
           o -> InstanceCreator.newInstance(this.m_retryAnalyzer.getClass()));
     }
     return retryAnalyzer;
+  }
+
+  private static final List<Class<?>> EXCLUSION_CLASSES = Arrays.asList(
+      String.class,
+      Integer.class,
+      Long.class,
+      Boolean.class,
+      Double.class,
+      Float.class,
+      Character.class
+  );
+
+  private static boolean relyOnParametersToBeUsedAsKeys(Object[] keys) {
+    if (keys == null) {
+      return false;
+    }
+    return Arrays.stream(keys)
+        .filter(Objects::nonNull)
+        .map(Object::getClass)
+        .anyMatch(EXCLUSION_CLASSES::contains);
   }
 
 }
